--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <script src="https://checkout.stripe.com/checkout.js"></script>
+  <script
+    src="https://www.paypal.com/sdk/js?client-id=AQzDBaHkjpFAUHdF4X-Y53nCQPmkFM7NqcBNtFoQ4lH_8qKIJEzpiAUD_MxeSE79QQAzyxGvUjC6vzcy"></script>
 </head>
 
 <body class="mat-typography">
